--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -1,8 +1,10 @@
 section {
-    width: 100%;
-    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 70vh;
+    /* height: 70vh; */
+}
+
+.container {
+    padding: 1rem;
 }
