--- a/src/components/todos/Todo.css
+++ b/src/components/todos/Todo.css
@@ -1,10 +1,19 @@
 article {
     display: flex;
+}
+
+.todo-man {
     flex-direction: column;
 }
 
 aside {
+    width: 100%;
     height: 50px;
+    margin-bottom: 2rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 aside.finished {
