--- a/src/components/datecomponent/DateItem.module.css
+++ b/src/components/datecomponent/DateItem.module.css
@@ -3,9 +3,17 @@
     height: 4rem;
     background-color: #D9D9D9;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .date-text {
     margin: 0;
     padding: 0;
+}
+
+.active {
+    color: white;
+    background-color: rgba(61, 52, 41, 0.8);
 }
