--- a/src/components/todos/Todo.css
+++ b/src/components/todos/Todo.css
@@ -1,9 +1,12 @@
 article {
     display: flex;
+
 }
 
 .todo-man {
     flex-direction: column;
+    justify-content: flex-end;
+    height: 40vh;
 }
 
 aside {
@@ -14,6 +17,8 @@ aside {
     display: flex;
     align-items: center;
     justify-content: center;
+    /* filter: drop-shadow(0 4px 4px #404040); */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 aside.finished {
