--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,11 +6,20 @@ nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 nav h1 {
     text-align: center;
-    font-family: 'Junge', serif;
     font-size: 2.5rem;
     margin: 0;
+}
+
+img {
+    position: absolute;
+    bottom: -4rem;
+    left: 0;
+    width: 10rem;
+    transform: rotateX(180deg);
+
 }
