--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -17,9 +17,14 @@ nav h1 {
 
 img {
     position: absolute;
+    top: -1rem;
+    left: -3rem;
+    width: 10rem;
+    transform: rotate(45deg);
+    /* position: absolute;
     bottom: -4rem;
     left: 0;
     width: 10rem;
-    transform: rotateX(180deg);
+    transform: rotateX(180deg); */
 
 }
