--- a/src/components/todos/TodoMan.css
+++ b/src/components/todos/TodoMan.css
@@ -16,7 +16,7 @@ aside {
     color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     /* filter: drop-shadow(0 4px 4px #404040); */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -35,6 +35,23 @@ aside.progress {
 
 aside.unfinished {
     background-color: #8C0301;
+}
+
+.text {
+    flex-basis: 120px;
+    flex-grow: 3;
+    text-align: center;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48;
+    flex-basis: 30px;
+    flex-grow: 0;
+    margin: 1em 0;
 }
 
 .button {
