--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -2,4 +2,49 @@
     background-color: #E0D3BD;
     height: 300px;
     margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form * {
+    margin: .6rem;
+}
+
+.form input {
+    height: 1.5rem;
+    width: 50%;
+}
+
+.form select {
+    height: 1.5rem;
+    width: 50%;
+}
+
+.inputItem {
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-around;
+}
+
+.button {
+    display: inline-block;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    background: #3e3529;
+    color: white;
+    border-radius: 8px;
+    padding: 14px 24px 16px;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1;
+    transition: transform 200ms, background 200ms;
+}
+
+.button:hover {
+    background-color: #705a3d;
+    transform: translateY(-2px);
 }
