Added Filter to the app, Returns Date name and Year

--- a/src/components/datecomponent/DateManager.module.css
+++ b/src/components/datecomponent/DateManager.module.css
@@ -4,3 +4,13 @@
     justify-content: space-around;
     margin: 2rem 0;
 }
+
+.filter {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.filter * {
+    margin: 15px;
+}
