--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -1,14 +1,16 @@
 .form {
     background-color: #E0D3BD;
-    height: 300px;
+    height: 18rem;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 7px double #3e3529;
 }
 
 .form * {
-    margin: .6rem;
+    margin-top: .4rem;
+    flex-grow: 1;
 }
 
 .form input {
@@ -29,6 +31,12 @@
     align-content: space-around;
 }
 
+.submitItem {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
 .button {
     display: inline-block;
     outline: 0;
@@ -42,6 +50,7 @@
     font-weight: 700;
     line-height: 1;
     transition: transform 200ms, background 200ms;
+    max-height: 30px;
 }
 
 .button:hover {
