Add Modal using react Modal and Fix Date Selection

--- a/src/components/datecomponent/DateItem.module.css
+++ b/src/components/datecomponent/DateItem.module.css
@@ -8,6 +8,10 @@
     justify-content: space-evenly;
 }
 
+.date:hover {
+    outline: 1px solid black;
+}
+
 .date-text {
     margin: 0;
     padding: 0;
